# saba

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .travis_build.sh  LICENSE.rst  MANIFEST.in  README.md  README.rst  pip-requirements  readthedocs.yml  setup.cfg  setup.py  tox.ini  travis_astropy.sh  travis_shpera_py3.sh
astrosherpa_bridge/: __init__.py  main.py
astrosherpa_bridge/tests/: __init__.py  test_main.py
docs/: Makefile  api.rst  conf.py  examples_2d.rst  examples_basic.rst  examples_complex.rst  examples_mcmc.rst  gen_plots.py  index.rst  make.bat  pip-requirements  references.txt  sherpafitter.rst  sherpafitter_examples.rst
docs/_static/: saba.css
docs/docs/: sherpafitter.rst
docs/docs/_build/doctrees/: environment.pickle  index.doctree  sherpafitter.doctree  sherpafitter_examples.doctree
docs/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sherpafitter.html  sherpafitter_examples-1.py  sherpafitter_examples.html
docs/docs/_build/html/_modules/: index.html
docs/docs/_build/html/_modules/astrosherpa_bridge/: main.html
docs/docs/_build/html/_sources/: sherpafitter_examples.txt
licenses/: LICENSE.rst
saba/: __init__.py  conftest.py  datasets.py  main.py  models.py  stat_methods.py  util.py
saba/tests/: __init__.py  coveragerc  test_main.py
