[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True


[metadata]
package_name = astrosherpa_bridge
description = Astropy affiliated package
long_description = This is a package fitting astropy models using sherpa
author = Michele Costa
author_email = micky.t.costa@gmail.com
license = GPL3+
url = http://astropy.org/
edit_on_github = False
github_project = nocturnalastro/astrosherpa_bridge


[entry_points]

[asb_entry_points]
SherpaFitter = astrosherpa_bridge:SherpaFitter
SherpaMCMC = astrosherpa_bridge:SherpaMCMC

