[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True


[metadata]
package_name = saba
description = Astropy affiliated package
long_description = This is a package for fitting astropy models using sherpa
author = Michele Costa
author_email = micky.t.costa@gmail.com
license = GPLv3+
url = https://github.com/nocturnalastro/saba
edit_on_github = False
github_project = nocturnalastro/saba


[entry_points]

[saba_entry_points]
SherpaFitter = saba:SherpaFitter
