[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = saba
description = SABA - A code to bridge and astropy and sherpa
long_description = SABA is a code to brigde astropy and and Sherpa modelling and fitting. Both packages provide a a modelling and fitting framework that is in principle compatible, but uses different APIs. SABA translates between the two packages, so that e.g. sherpa models and fitters cna be used inside the astropy modelling framework.
author = Michele Costa
author_email = micky.t.costa@gmail.com
license = GPLv3+
url = https://github.com/astropy/saba
edit_on_github = False
github_project = astropy/saba

# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.2.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

[saba_entry_points]
SherpaFitter = saba:SherpaFitter
